<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/cadastro_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:menu="@menu/activity_cadastrar_manifestacao"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/categoria_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/cadastro_toolbar"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:text="@string/categoria"
        android:textSize="18sp"
        android:paddingTop="16dp" />

    <View
        android:id="@+id/separator_1"
        style="@style/Divider"
        android:layout_below="@id/categoria_text"/>

    <TextView
        android:id="@+id/assunto_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/separator_1"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/assunto"
        android:textSize="18sp"
        android:layout_alignRight="@+id/categoria_text"
        android:layout_alignEnd="@+id/categoria_text" />

    <View
        android:id="@+id/separator_2"
        style="@style/Divider"
        android:layout_below="@id/assunto_text"/>

    <TextView
        android:id="@+id/tipo_manifestacao_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/separator_2"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/tipo_manifestacao"
        android:textSize="18sp"
        android:layout_alignRight="@+id/assunto_text"
        android:layout_alignEnd="@+id/assunto_text" />

    <View
        android:id="@+id/separator_3"
        style="@style/Divider"
        android:layout_below="@id/tipo_manifestacao_text"/>

    <EditText
        android:id="@+id/titulo_edit_text"
        android:hint="@string/enter_titulo"
        android:background="@android:color/transparent"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:selectAllOnFocus="false"
        android:layout_width="match_parent"
        android:layout_below="@id/separator_3"/>

    <View
        android:id="@+id/separator_4"
        style="@style/Divider"
        android:layout_below="@id/titulo_edit_text"/>

    <EditText
        android:id="@+id/mensagem_edit_text"
        android:hint="@string/enter_mensagem"
        android:background="@android:color/transparent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator_4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/categoria_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/categoria_text"
        android:layout_marginRight="16dp"
        android:layout_above="@+id/separator_1"
        android:layout_below="@+id/cadastro_toolbar" />

    <Spinner
        android:id="@+id/tipo_manifestacao_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tipo_manifestacao_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/separator_2"
        android:layout_above="@+id/separator_3" />

    <Spinner
        android:id="@+id/assunto_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/assunto_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/separator_1"
        android:layout_above="@+id/separator_2" />

</RelativeLayout>
